# goop-veil

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KOBE-RELEASE-INSTRUCTIONS.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  reauth-codex.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  docs_truth_alignment.yml  false_positive_or_negative.yml  router_compatibility.yml
.github/workflows/: ci.yml  release.yml
.venv-review/: pyvenv.cfg
data/: materials.json  signatures.json
docs/: COMMUNITY_LABELS.md  CONTRIBUTING_FIRMWARE.md  DETECTION_QUALITY_REPORTING.md  EXPOSURE_ENGINE_2026-03-11.md  EXTERNAL_REVIEW_RESPONSE_PLAN.md  FAQ.md  GITHUB_ISSUE_PACK_EXTERNAL_REVIEW.md  GITHUB_RELEASE_BODY_v0.1.0-beta.md  HN_POST_v0.1.0-beta.md  KNOWN_LIMITATIONS.md  LANDING_PAGE_COPY_v0.1.0-beta.md  LAUNCH_PACK_2026-03-09.md  LAUNCH_SEQUENCE_v0.1.0-beta.md  POSTING_KIT_2026-03-11.md  PROJECT_GOVERNANCE_NOTES.md  RELEASE_NOTES_v0.1.0-beta.md  RELEASE_NOTES_v0.1.1-beta.md  ROUTER_COMPATIBILITY.md  SECURITY_REVIEW.md  STARTER_ISSUE_BATCH_WEEK_ONE.md  X_THREAD_v0.1.0-beta.md  issue_ci.md  issue_cli_confirm.md  issue_intake.md  issue_signing.md  issue_truth.md  launch-materials.md  mitigation-implementation-plan.md  release-plan-kobepaw.md  release-readiness.md  war-room-launch-plan.md
firmware/veil_countermeasure/: platformio.ini
firmware/veil_countermeasure/src/: audit_log.c  audit_log.h  command_parser.c  command_parser.h  compliance_monitor.c  main.c  (+9 more)
firmware/veil_detector/: platformio.ini
python/goop_veil/: __init__.py  cli.py  compliance.py  config.py  models.py
scripts/: check_secrets.py
src/: frames.rs  fresnel.rs  lib.rs  oui.rs  pcap.rs  signal.rs
tests/: conftest.py  test_cli.py  test_compliance.py  test_config.py  test_models.py  test_terminology_compliance.py
tests/test_active/: test_compliance_monitor.py  test_privacy_enhancer.py
tests/test_adversarial/: test_brorl_adapter.py  test_self_test.py
tests/test_detection/: test_alert_engine.py  test_beacon_scanner.py  test_channel_hop_detector.py  test_csi_signature.py  test_traffic_analyzer.py
tests/test_mitigation/: test_advisor.py  test_models.py
tests/test_passive/: test_fresnel_calculator.py  test_placement_optimizer.py
(+70 files in other folders)
