[package]
name = "goop-veil-core"
version = "0.1.0"
edition = "2021"
description = "Rust core for goop-veil WiFi privacy system"
license = "Apache-2.0"

[lib]
name = "_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = "0.22"
rustfft = "6.2"

[features]
default = []
extension-module = ["pyo3/extension-module"]
